<resources>
    <string name="app_name">Scan me</string>
    <string name="txt_recently_scanned">Recently Scanned</string>
    <string name="txt_scan">Scan</string>
    <string name="txt_favourites">Favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_welcome_again">Welcome again</string>
    <string name="tv_description_join_us">Heyyyy! Can you feel how happy we are? :)</string>
    <string name="btn_with_google">Continue with Google</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_create_account">Create account</string>
    <string name="tv_not_a_member">Not a member of our family yet?</string>

    <string name="tv_or">or</string>
    <string name="tv_create_account">Join us</string>
    <string name="tv_join_us">Join our family</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="tv_already_have_an_account">Already family member yet?</string>

    <string name="hint_email">youremail@address.com</string>
    <string name="hint_password">Pas**rd</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_phone_number">Phone number</string>

<!--    ITEM IN RECYCLER VIEW-->
    <string name="txt_scanned_item">I am text of scanned item</string>
    <string name="txt_scanned_date">02.10.2020, 23:00</string>
</resources>