<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/recently_scanned"
            android:icon="@drawable/ic_history"
            android:title="@string/txt_recently_scanned"
            app:cnb_iconColor="@color/colorWhite"
            app:cnb_textColor="@color/colorWhite"
            app:cnb_backgroundColor="@color/brown">
        </item>

        <item
            android:id="@+id/scan"
            android:icon="@drawable/ic_moon"
            android:title="@string/txt_scan"
            app:cnb_iconColor="@color/colorWhite"
            app:cnb_textColor="@color/colorWhite"
            app:cnb_backgroundColor="@color/brown">
        </item>

        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/txt_favourites"
            app:cnb_iconColor="@color/colorWhite"
            app:cnb_textColor="@color/colorWhite"
            app:cnb_backgroundColor="@color/brown">
        </item>
</menu>