<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".Login" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="@dimen/thirty_two_dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/title_welcome_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_welcome_again"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/twenty_four"
            android:fontFamily="@font/sfsemibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_description_welcome_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_description_join_us"
            android:fontFamily="@font/sfregular"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_welcome_again"/>

        <Button
            android:id="@+id/btn_with_google_in_login_page"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/btn_with_google"
            android:textColor="@color/colorGeneric"
            android:textSize="@dimen/eighteen"
            android:fontFamily="@font/sfregular"
            android:background="@drawable/button_shape_log"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/thirty_two_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_welcome_again"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description_welcome_again" />

        <ImageView
            android:id="@+id/img_line_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_with_google_in_login_page"
            android:layout_marginTop="@dimen/thirty_two_dp"/>

        <TextView
            android:id="@+id/tv_or_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_or"
            android:textSize="@dimen/size_generic"
            android:textColor="@color/colorGeneric"
            android:fontFamily="@font/sfregular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_with_google_in_login_page"
            android:layout_marginTop="@dimen/eighteen_dp"/>

        <EditText
            android:id="@+id/et_email_login"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/eight_dp"
            android:layout_width="282dp"
            android:layout_height="44dp"
            android:fontFamily="@font/sfregular"
            android:textSize="@dimen/size_generic"
            android:background="@drawable/button_shape_log"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_line_login"
            android:layout_marginTop="@dimen/thirty_two_dp" />

        <EditText
            android:id="@+id/et_password_login"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/eight_dp"
            android:layout_width="282dp"
            android:layout_height="44dp"
            android:fontFamily="@font/sfregular"
            android:textSize="@dimen/size_generic"
            android:background="@drawable/button_shape_log"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_login"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btn_sign_in"
            android:text="@string/btn_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen"
            android:fontFamily="@font/sfmedium"
            android:layout_width="282dp"
            android:layout_height="0dp"
            android:background="@drawable/button_shape_create_account"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password_login"/>

        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/sixty_four_dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/tv_not_a_member"
            android:textColor="@color/colorGeneric"
            android:textSize="@dimen/size_generic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

        <TextView
            android:id="@+id/tv_join_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginBottom="@dimen/sixty_four_dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/tv_create_account"
            android:textColor="@color/blue"
            android:textSize="@dimen/size_generic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorGeneric"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_join_us"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>